test-kgateway/pod-01.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kg-pod-01
  namespace: test-kgateway
  labels:
    app: kg-pod-01
spec:
  containers:
    - name: pod-container
      image: nginx:latest
      ports:
        - containerPort: 80
