test-kgateway/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-01
  namespace: test-kgateway
spec:
  type: ClusterIP
  selector:
    app: kg-pod-01
  ports:
    - port: 80
      targetPort: 80
